--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -509,6 +509,10 @@
                   <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 2v6h-6"/><path d="M3 12a9 9 0 0 1 15-6.7L21 8"/><path d="M3 22v-6h6"/><path d="M21 12a9 9 0 0 1-15 6.7L3 16"/></svg>
                   Recompile
                 </button>
+                <button class="btn btn-secondary btn-small btn-icon" onclick="duplicatePost('${item.slug}')">
+                  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
+                  Duplizieren
+                </button>
                 <span class="action-separator"></span>
                 <button class="btn btn-danger btn-small btn-icon" onclick="deletePost('${item.slug}')">
                   <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
@@ -601,6 +605,18 @@
       // Global recompile handler - opens editor with source
       window.recompilePost = function (slug) {
         window.location.href = `editor.html?edit=${encodeURIComponent(slug)}`;
+      };
+
+      // Global duplicate handler - clones page and opens editor
+      window.duplicatePost = async function (slug) {
+        try {
+          const { sourceData } = await App.clonePage(slug, 'page');
+          // Store cloned data in sessionStorage to pass to editor
+          sessionStorage.setItem('clonedSource', JSON.stringify(sourceData));
+          window.location.href = 'editor.html?clone=true';
+        } catch (err) {
+          Modal.error('Fehler beim Duplizieren: ' + err.message);
+        }
       };
     })();
   </script>
