--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -15,12 +15,14 @@
         <h2 class="card-title" data-i18n="pages.login">Login</h2>
       </div>
       <div class="card-body">
-        <div class="form-group">
-          <label for="password" data-i18n="auth.password">Password</label>
-          <input type="password" id="password" data-i18n-placeholder="auth.passwordPlaceholder" placeholder="Enter password">
-        </div>
-        <button id="login-btn" class="btn btn-primary build-publish-btn" data-i18n="auth.login">Log in</button>
-        <p id="login-error" class="message error hidden mt-1"></p>
+        <form id="login-form" novalidate>
+          <div class="form-group">
+            <label for="password" data-i18n="auth.password">Password</label>
+            <input type="password" id="password" required autocomplete="current-password" data-i18n-placeholder="auth.passwordPlaceholder" placeholder="Enter password" aria-describedby="login-error">
+          </div>
+          <button type="submit" id="login-btn" class="btn btn-primary build-publish-btn" data-i18n="auth.login">Log in</button>
+          <p id="login-error" class="message error hidden mt-1" role="alert" aria-live="polite"></p>
+        </form>
       </div>
     </div>
   </div>
@@ -33,6 +35,7 @@
         await new Promise(r => setTimeout(r, 10));
       }
 
+      const loginForm = document.getElementById('login-form');
       const passwordInput = document.getElementById('password');
       const loginBtn = document.getElementById('login-btn');
       const loginError = document.getElementById('login-error');
@@ -64,7 +67,20 @@
       passwordInput.focus();
 
       // Login handler
-      loginBtn.addEventListener('click', async () => {
+      loginForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        // Clear previous errors
+        loginError.classList.add('hidden');
+        passwordInput.setCustomValidity('');
+
+        // Validate with HTML5
+        if (!loginForm.checkValidity()) {
+          passwordInput.setCustomValidity(t('auth.errorEnterPassword'));
+          passwordInput.reportValidity();
+          return;
+        }
+
         const password = passwordInput.value.trim();
         if (!password) {
           showError(t('auth.errorEnterPassword'));
@@ -72,7 +88,6 @@
         }
 
         loginBtn.disabled = true;
-        loginError.classList.add('hidden');
 
         try {
           await App.login(password);
@@ -83,10 +98,6 @@
         } finally {
           loginBtn.disabled = false;
         }
-      });
-
-      passwordInput.addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') loginBtn.click();
       });
 
       function showError(msg) {
